--- a/config/cursor/settings.json
+++ b/config/cursor/settings.json
@@ -6,14 +6,13 @@
   "files.autoSave": "afterDelay",
   "editor.fontSize": 14,
   "editor.fontFamily": "'Monaspace Argon', monospace",
-  "editor.fontWeight": "500",
   "editor.inlineSuggest.fontFamily": "'Monaspace Krypton', monospace",
   "editor.fontLigatures": "'calt', 'ss03', 'ss04', 'ss05', 'ss06', 'ss07', 'ss08', 'ss09', 'ss10', 'liga'",
   "terminal.integrated.fontFamily": "'Monaspace Argon', monospace",
   "terminal.integrated.fontSize": 14,
   "workbench.activityBar.orientation": "vertical",
   "workbench.iconTheme": "bearded-icons",
-  "workbench.colorTheme": "Bearded Theme Anthracite",
+  "workbench.colorTheme": "Bearded Theme Arc",
   "prettier.printWidth": 100,
   "git.blame.editorDecoration.enabled": true,
   "git.blame.statusBarItem.enabled": true,
