--- a/symlinks.yaml
+++ b/symlinks.yaml
@@ -18,6 +18,8 @@
     ${XDG_CONFIG_HOME}/ghostty: config/ghostty
     ${XDG_CONFIG_HOME}/zed: config/zed
     ${XDG_CONFIG_HOME}/glance: config/glance
+    ${XDG_CONFIG_HOME}/colima/default/colima.yaml: config/colima/colima.yaml
+    ~/.docker/config.json: config/docker/config.json
     ~/Library/Application Support/Cursor/User/settings.json: config/cursor/settings.json
     ~/Library/Application Support/Cursor/User/keybindings.json: config/cursor/keybindings.json
     ~/.cursor/mcp.json: config/cursor/mcp.json
