update ghostty & cursor

--- a/config/cursor/settings.json
+++ b/config/cursor/settings.json
@@ -39,5 +39,5 @@
   },
   "biome.suggestInstallingGlobally": false,
   "json.schemaDownload.enable": true,
-  "claude-code.selectedModel": "default",
+  "claude-code.selectedModel": "default"
 }
