--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -6,7 +6,6 @@ font-size = 14
 theme = Argonaut
 
 # Window Settings
-initial-window = false
 window-width = 110
 window-height = 40
 
@@ -15,6 +14,5 @@ macos-titlebar-proxy-icon = hidden
 
 # Quick Terminal
 keybind = global:ctrl+cmd+t=toggle_quick_terminal
-quick-terminal-position = bottom
-quick-terminal-space-behavior = remain
-quick-terminal-autohide = false
+quick-terminal-position = top
+quick-terminal-size = 50%,50%
