--- a/config/docker/config.json
+++ b/config/docker/config.json
@@ -1,7 +1,5 @@
 {
-	"auths": {},
-	"currentContext": "colima",
-	"cliPluginsExtraDirs": [
-		"/opt/homebrew/lib/docker/cli-plugins"
-	]
+  "auths": {},
+  "currentContext": "colima",
+  "cliPluginsExtraDirs": ["/opt/homebrew/lib/docker/cli-plugins"]
 }
