update tmux, zed

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -43,7 +43,7 @@ set -g @sessionx-window-width '75%'
 
 # Keybindings
 bind g display-popup -E -xC -yC -w 80% -h 95% -d "#{pane_current_path}" lazygit
-bind-key -r f run-shell "tmux neww ~/.config/tmux/scripts/tmux-sessionizer.sh"
-bind-key -r s run-shell "tmux neww ~/.config/tmux/scripts/tmux-session-switcher.sh"
+bind-key -r f display-popup -E -xC -yC -w 80% -h 95% -d "#{pane_current_path}" ~/.config/tmux/scripts/tmux-sessionizer.sh
+bind-key -r s display-popup -E -xC -yC -w 80% -h 95% -d "#{pane_current_path}" ~/.config/tmux/scripts/tmux-session-switcher.sh
 
 run '~/.tmux/plugins/tpm/tpm'
