--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -20,6 +20,6 @@
   "theme": {
     "mode": "system",
     "light": "Ayu Light",
-    "dark": "Catppuccin Mocha"
+    "dark": "Zedokai Darker (Filter Ristretto)"
   }
 }
