--- a/config/git/config
+++ b/config/git/config
@@ -6,7 +6,7 @@
     path = ~/.config/git/config-work
 
 [include]
-    path = ~/.config/git/config-personal
+    path = ~/.config/git/config-local
 
 [core]
     pager = delta
