--- a/config/cursor/settings.json
+++ b/config/cursor/settings.json
@@ -4,15 +4,14 @@
   "window.commandCenter": true,
   "window.restoreWindows": "none",
   "files.autoSave": "afterDelay",
-  "editor.fontSize": 14,
-  "editor.fontFamily": "'Monaspace Argon', monospace",
+  "editor.fontFamily": "'Monaspace Neon', monospace, 'MesloLGL Nerd Font Mono'",
   "editor.inlineSuggest.fontFamily": "'Monaspace Krypton', monospace",
   "editor.fontLigatures": "'calt', 'ss03', 'ss04', 'ss05', 'ss06', 'ss07', 'ss08', 'ss09', 'ss10', 'liga'",
-  "terminal.integrated.fontFamily": "'Maple Mono NF', monospace",
-  "terminal.integrated.fontSize": 14,
+  "terminal.integrated.fontFamily": "'Monaspace Neon NF', monospace, 'MesloLGL Nerd Font Mono'",
+  "terminal.integrated.fontSize": 16,
   "workbench.activityBar.orientation": "vertical",
   "workbench.iconTheme": "bearded-icons",
-  "workbench.colorTheme": "Bearded Theme Coffee Reversed",
+  "workbench.colorTheme": "Ayu Dark Bordered",
   "prettier.printWidth": 100,
   "git.blame.editorDecoration.enabled": true,
   "git.blame.statusBarItem.enabled": true,
@@ -39,5 +38,8 @@
   },
   "biome.suggestInstallingGlobally": false,
   "json.schemaDownload.enable": true,
-  "window.zoomLevel": 0.5
+  "editor.fontSize": 14,
+  "claudeCode.preferredLocation": "sidebar",
+  "claudeCode.selectedModel": "opus",
+  "makefile.configureOnOpen": true
 }
