--- a/config/git/config
+++ b/config/git/config
@@ -2,7 +2,7 @@
 	name = Artun Colak
 	email = artuncolak97@gmail.com
 
-[includeIf "gitdir:~/Projects/work"]
+[includeIf "gitdir:/Users/artuncolak/projects/work/"]
     path = ~/.config/git/config-work
 
 [include]
@@ -15,8 +15,7 @@
     diffFilter = delta --color-only
 
 [delta]
-    navigate = true  # use n and N to move between diff sections
-    dark = true      # or light = true, or omit for auto-detection
+    navigate = true
 
 [merge]
     conflictstyle = zdiff3
