--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,49 +1,43 @@
 set-option -g default-terminal 'screen-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
 
+set -g default-command "$SHELL -l"
 set -g prefix ^A
 set -g base-index 1 # start indexing windows at 1 instead of 0
 set -g mouse on
 set -g status-position top
 set -g default-terminal "${TERM}"
 set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
+set -g pane-border-style 'fg=#1B1F29,bg=default'
+set -g update-environment "SSH_AUTH_SOCK DISPLAY XAUTHORITY GPG_TTY DBUS_SESSION_BUS_ADDRESS PATH HOME LANG LC_ALL"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'mike-rambil/tmux-catppuccin'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'omerxx/tmux-sessionx'
 
-# Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
+# Statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'fg=#e23140'
 
-# Make the status line pretty and add some modules
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-set -g @catppuccin_status_modules_right "directory date_time"
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{b:pane_current_path}"
+set -g status-left '#{?client_prefix,#[bg=#e23140]#[fg=white],#[bg=#7FDBCA]#[fg=black]}  #S #[bg=terminal] '
+set -g status-left-length 30
 
-set -g @sessionx-bind 'o'
-set -g @sessionx-window-height '85%'
-set -g @sessionx-window-width '75%'
+set -g status-right-style 'fg=black bg=#E5C07B'
+set -g status-right ' #[fg=black]󰥔  #[fg=black]%Y-%m-%d %H:%M '
+set -g status-right-length 50
+
+setw -g window-status-current-style 'fg=black bg=#e23140'
+setw -g window-status-current-format ' #I 󰮯  #W #F '
+
+setw -g window-status-style 'fg=#e23140 bg=#1A1B26'
+setw -g window-status-format ' #I 󰆍  #[fg=white]#W #[fg=#E5C07B]#F '
+
+setw -g window-status-bell-style 'fg=#E5C07B bg=red bold'
 
 # Keybindings
-bind g display-popup -E -xC -yC -w 80% -h 95% -d "#{pane_current_path}" lazygit
-bind-key -r f display-popup -E -xC -yC -w 80% -h 95% -d "#{pane_current_path}" ~/.config/tmux/scripts/tmux-sessionizer.sh
-bind-key -r s display-popup -E -xC -yC -w 80% -h 95% -d "#{pane_current_path}" ~/.config/tmux/scripts/tmux-session-switcher.sh
+bind p display-popup -E -xC -yC -w 90% -h 80% -d "#{pane_current_path}"
+bind-key -r s display-popup -E -xC -yC -w 90% -h 90% -d "#{pane_current_path}" ~/.config/tmux/scripts/tmux-sessionizer.sh
+bind-key -r g display-popup -E -xC -yC -w 90% -h 90% -d "#{pane_current_path}" lazygit
 
 run '~/.tmux/plugins/tpm/tpm'
