--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -1,26 +1,30 @@
 {
+  "buffer_line_height": "comfortable",
   "show_edit_predictions": true,
   "telemetry": {
     "diagnostics": false,
-    "metrics": false
+    "metrics": false,
   },
   "agent": {
     "always_allow_tool_actions": true,
-    "single_file_review": true
+    "single_file_review": true,
   },
   "icon_theme": "Bearded Icon Theme",
   "base_keymap": "Cursor",
   "ui_font_size": 18.0,
   "buffer_font_size": 16.0,
-  "buffer_font_family": "Monaspace Argon",
+  "buffer_font_family": "Monaspace Neon",
+  "buffer_font_fallbacks": ["Monaspace Neon NF"],
   "terminal": {
-    "font_family": "Maple Mono NF"
+    "font_family": "Monaspace Neon",
+    "font_fallbacks": ["MesloLGL Nerd Font Mono"],
+    "font_size": 16,
   },
   "autosave": "on_focus_change",
   "theme": {
     "mode": "system",
-    "light": "Zedokai Light (Filter Sun)",
-    "dark": "Zedokai Darker (Filter Ristretto)"
+    "light": "Ayu Light",
+    "dark": "Ayu Dark",
   },
   "auto_install_extensions": {
     "bearded": true,
@@ -32,6 +36,6 @@
     "make": true,
     "mcp-server-context7": true,
     "toml": true,
-    "zedokai": true
-  }
+    "zedokai": true,
+  },
 }
